--- a/Jypeli/Jypeli-Linux.csproj
+++ b/Jypeli/Jypeli-Linux.csproj
@@ -115,8 +115,8 @@
     <Compile Include="Controls\BackButton\BackButton.cs" />
     <Compile Include="DataTypes\Angle.cs" />
     <Compile Include="DataTypes\BoundingRectangle.cs" />
-    <Compile Include="DataTypes\Direction.cs" />
     <Compile Include="DataTypes\Dimensional.cs" />
+    <Compile Include="DataTypes\Direction.cs" />
     <Compile Include="DataTypes\GameObjectContainer.cs" />
     <Compile Include="DataTypes\INotifyList.cs" />
     <Compile Include="DataTypes\Positional.cs" />
@@ -179,6 +179,7 @@
     <Compile Include="GameObjects\PhysicsObject\IPhysicsObject.cs" />
     <Compile Include="GameObjects\PhysicsObject\Movement.cs" />
     <Compile Include="GameObjects\PhysicsObject\PhysicsObject.cs" />
+    <Compile Include="GameObjects\PhysicsStructure\PhysicsStructure.cs" />
     <Compile Include="GameObjects\Surface\Surface.cs" />
     <Compile Include="GameObjects\Surface\Surfaces.cs" />
     <Compile Include="GameObjects\Widget\Appearance.cs" />
@@ -193,9 +194,10 @@
     <Compile Include="Game\Game.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Physics\PhysicsGameBase.cs" />
+    <Compile Include="Game\Storage.cs" />
     <Compile Include="Game\Graphics.cs" />
     <Compile Include="Game\Layers.cs" />
-    <Compile Include="Game\Physics.cs" />
     <Compile Include="Game\Time.cs" />
     <Compile Include="Game\Widgets.cs" />
     <Compile Include="Graphics\Animation.cs" />
@@ -226,11 +228,26 @@
     <Compile Include="Physics\Ignorers\JypeliGroupIgnorer.cs" />
     <Compile Include="Physics\Ignorers\ObjectIgnorer.cs" />
     <Compile Include="Physics\IPhysicsClient.cs" />
+    <Compile Include="Physics\IPhysicsEngine.cs" />
+    <Compile Include="Physics\Joints\IAxleJoint.cs" />
     <Compile Include="Physics\PhysicsInterface.cs" />
     <Compile Include="Shapes\Shapes.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Storage\SaveAttribute.cs" />
+    <Compile Include="Storage\FileManager\Assert.cs" />
+    <Compile Include="Storage\FileManager\Directories.cs" />
+    <Compile Include="Storage\FileManager\Files.cs" />
+    <Compile Include="Storage\FileManager\HTTP.cs" />
+    <Compile Include="Storage\FileManager\NameHelpers.cs" />
+    <Compile Include="Storage\FileManager\Serialization.cs" />
+    <Compile Include="Storage\FileManager\XnaSerialization.cs" />
+    <Compile Include="Storage\AnimationReader.cs" />
+    <Compile Include="Storage\LoadState.cs" />
+    <Compile Include="Storage\SaveState.cs" />
+    <Compile Include="Storage\StorageFile.cs" />
+    <Compile Include="Storage\TypeHelper.cs" />
+    <Compile Include="Storage\LinuxFileManager.cs" />
     <Compile Include="DataTypes\Destroyable.cs" />
     <Compile Include="DataTypes\Tagged.cs" />
     <Compile Include="Helpers\ListHelpers.cs" />
@@ -267,22 +284,7 @@
     <Compile Include="WP8\DisplayOrientation.cs" />
     <Compile Include="WP8\DisplayResolution.cs" />
     <Compile Include="WP8\PhoneStub.cs" />
-    <Compile Include="Properties\AssemblyInfo-Xamarin.cs" />
-    <Compile Include="Storage\AnimationReader.cs" />
-    <Compile Include="Storage\IsolatedStorageManager.cs" />
-    <Compile Include="Storage\LoadState.cs" />
-    <Compile Include="Storage\SaveState.cs" />
-    <Compile Include="Storage\StorageFile.cs" />
-    <Compile Include="Storage\TypeHelper.cs" />
-    <Compile Include="Storage\FileManager\Assert.cs" />
-    <Compile Include="Storage\FileManager\Directories.cs" />
-    <Compile Include="Storage\FileManager\Files.cs" />
-    <Compile Include="Storage\FileManager\HTTP.cs" />
-    <Compile Include="Storage\FileManager\NameHelpers.cs" />
-    <Compile Include="Storage\FileManager\Serialization.cs" />
-    <Compile Include="Storage\FileManager\XnaSerialization.cs" />
-    <Compile Include="Game\Storage.cs" />
-    <Compile Include="Storage\LinuxFileManager.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
