--- a/Jypeli/Jypeli-MacOS.csproj
+++ b/Jypeli/Jypeli-MacOS.csproj
@@ -137,9 +137,11 @@
     <Compile Include="Controls\BackButton\BackButton.cs" />
     <Compile Include="DataTypes\Angle.cs" />
     <Compile Include="DataTypes\BoundingRectangle.cs" />
+    <Compile Include="DataTypes\Dimensional.cs" />
     <Compile Include="DataTypes\Direction.cs" />
     <Compile Include="DataTypes\GameObjectContainer.cs" />
     <Compile Include="DataTypes\INotifyList.cs" />
+    <Compile Include="DataTypes\Positional.cs" />
     <Compile Include="DataTypes\ScoreList.cs" />
     <Compile Include="DataTypes\StringList.cs" />
     <Compile Include="DataTypes\SynchronousList.cs" />
@@ -199,6 +201,7 @@
     <Compile Include="GameObjects\PhysicsObject\IPhysicsObject.cs" />
     <Compile Include="GameObjects\PhysicsObject\Movement.cs" />
     <Compile Include="GameObjects\PhysicsObject\PhysicsObject.cs" />
+    <Compile Include="GameObjects\PhysicsStructure\PhysicsStructure.cs" />
     <Compile Include="GameObjects\Surface\Surface.cs" />
     <Compile Include="GameObjects\Surface\Surfaces.cs" />
     <Compile Include="GameObjects\Widget\Appearance.cs" />
@@ -207,14 +210,16 @@
     <Compile Include="GameObjects\Widget\Widget.cs" />
     <Compile Include="Game\Content.cs" />
     <Compile Include="Game\Controls.cs" />
+    <Compile Include="Game\DebugScreen.cs" />
     <Compile Include="Game\DelayedActions.cs" />
     <Compile Include="Game\Factory.cs" />
     <Compile Include="Game\Game.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Physics\PhysicsGameBase.cs" />
+    <Compile Include="Game\Storage.cs" />
     <Compile Include="Game\Graphics.cs" />
     <Compile Include="Game\Layers.cs" />
-    <Compile Include="Game\Physics.cs" />
     <Compile Include="Game\Time.cs" />
     <Compile Include="Game\Widgets.cs" />
     <Compile Include="Graphics\Animation.cs" />
@@ -242,13 +247,29 @@
     <Compile Include="Physics\Ignorers\GroupCollection.cs" />
     <Compile Include="Physics\Ignorers\GroupIgnorer.cs" />
     <Compile Include="Physics\Ignorers\Ignorer.cs" />
+    <Compile Include="Physics\Ignorers\JypeliGroupIgnorer.cs" />
     <Compile Include="Physics\Ignorers\ObjectIgnorer.cs" />
     <Compile Include="Physics\IPhysicsClient.cs" />
+    <Compile Include="Physics\IPhysicsEngine.cs" />
+    <Compile Include="Physics\Joints\IAxleJoint.cs" />
     <Compile Include="Physics\PhysicsInterface.cs" />
     <Compile Include="Shapes\Shapes.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Storage\SaveAttribute.cs" />
+    <Compile Include="Storage\FileManager\Assert.cs" />
+    <Compile Include="Storage\FileManager\Directories.cs" />
+    <Compile Include="Storage\FileManager\Files.cs" />
+    <Compile Include="Storage\FileManager\HTTP.cs" />
+    <Compile Include="Storage\FileManager\NameHelpers.cs" />
+    <Compile Include="Storage\FileManager\Serialization.cs" />
+    <Compile Include="Storage\FileManager\XnaSerialization.cs" />
+    <Compile Include="Storage\AnimationReader.cs" />
+    <Compile Include="Storage\LoadState.cs" />
+    <Compile Include="Storage\SaveState.cs" />
+    <Compile Include="Storage\StorageFile.cs" />
+    <Compile Include="Storage\TypeHelper.cs" />
+    <Compile Include="Storage\LinuxFileManager.cs" />
     <Compile Include="DataTypes\Destroyable.cs" />
     <Compile Include="DataTypes\Tagged.cs" />
     <Compile Include="Helpers\ListHelpers.cs" />
@@ -286,24 +307,6 @@
     <Compile Include="WP8\DisplayResolution.cs" />
     <Compile Include="WP8\PhoneStub.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DataTypes\Dimensional.cs" />
-    <Compile Include="DataTypes\Positional.cs" />
-    <Compile Include="Game\DebugScreen.cs" />
-    <Compile Include="Storage\AnimationReader.cs" />
-    <Compile Include="Storage\LinuxFileManager.cs" />
-    <Compile Include="Storage\LoadState.cs" />
-    <Compile Include="Storage\SaveState.cs" />
-    <Compile Include="Storage\StorageFile.cs" />
-    <Compile Include="Storage\TypeHelper.cs" />
-    <Compile Include="Storage\FileManager\Assert.cs" />
-    <Compile Include="Storage\FileManager\Directories.cs" />
-    <Compile Include="Storage\FileManager\Files.cs" />
-    <Compile Include="Storage\FileManager\HTTP.cs" />
-    <Compile Include="Storage\FileManager\NameHelpers.cs" />
-    <Compile Include="Storage\FileManager\Serialization.cs" />
-    <Compile Include="Storage\FileManager\XnaSerialization.cs" />
-    <Compile Include="Game\Storage.cs" />
-    <Compile Include="Physics\Ignorers\JypeliGroupIgnorer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Mac\v0.0\Xamarin.Mac.targets" />
