--- a/Jypeli/Jypeli-Win8.csproj
+++ b/Jypeli/Jypeli-Win8.csproj
@@ -179,6 +179,7 @@
     <Compile Include="GameObjects\PhysicsObject\IPhysicsObject.cs" />
     <Compile Include="GameObjects\PhysicsObject\Movement.cs" />
     <Compile Include="GameObjects\PhysicsObject\PhysicsObject.cs" />
+	<Compile Include="GameObjects\PhysicsStructure\PhysicsStructure.cs" />
     <Compile Include="GameObjects\Surface\Surface.cs" />
     <Compile Include="GameObjects\Surface\Surfaces.cs" />
     <Compile Include="GameObjects\Widget\Appearance.cs" />
@@ -195,7 +196,6 @@
     </Compile>
     <Compile Include="Game\Graphics.cs" />
     <Compile Include="Game\Layers.cs" />
-    <Compile Include="Game\Physics.cs" />
     <Compile Include="Game\Time.cs" />
     <Compile Include="Game\Widgets.cs" />
     <Compile Include="Game\Storage.cs" />
@@ -226,8 +226,9 @@
     <Compile Include="Physics\Ignorers\Ignorer.cs" />
     <Compile Include="Physics\Ignorers\JypeliGroupIgnorer.cs" />
     <Compile Include="Physics\Ignorers\ObjectIgnorer.cs" />
-    <Compile Include="Physics\IPhysicsClient.cs" />
-    <Compile Include="Physics\PhysicsInterface.cs" />
+    <Compile Include="Physics\PhysicsGameBase.cs" />
+    <Compile Include="Physics\IPhysicsEngine.cs" />
+    <Compile Include="Physics\Joints\IAxleJoint.cs" />
     <Compile Include="Shapes\Shapes.cs">
       <SubType>Code</SubType>
     </Compile>
