--- a/branches/MonoGame/Physics2d/Physics2d-Win8.csproj
+++ b/branches/MonoGame/Physics2d/Physics2d-Win8.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Assets\PlatformCharacter.cs" />
     <Compile Include="Joints\AxleJoint.cs" />
     <Compile Include="Physics2DDotNet\WinRTCompat.cs" />
+    <Compile Include="Physics2dEngine.cs" />
     <Compile Include="PhysicsBody\Coefficients.cs" />
     <Compile Include="PhysicsBody\Collisions.cs" />
     <Compile Include="PhysicsBody\CollisionShapeParameters.cs" />
@@ -135,11 +136,8 @@
     <Compile Include="PhysicsBody\Dimensions.cs" />
     <Compile Include="PhysicsBody\Inertia.cs" />
     <Compile Include="PhysicsBody\Movement.cs" />
-    <Compile Include="PhysicsClient.cs" />
     <Compile Include="PhysicsBody\PhysicsBody.cs" />
-    <Compile Include="PhysicsGame\Joints.cs" />
-    <Compile Include="PhysicsGame\PhysicsGame.cs" />
-    <Compile Include="PhysicsGame\PhysicsGameBase.cs" />
+    <Compile Include="PhysicsGame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Physics2DDotNet\ALVector2D.cs" />
     <Compile Include="Physics2DDotNet\Body.cs" />
