--- a/branches/MonoGame/SimplePhysics/SimplePhysics-Win8.csproj
+++ b/branches/MonoGame/SimplePhysics/SimplePhysics-Win8.csproj
@@ -66,9 +66,9 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="Collisions.cs" />
-    <Compile Include="PhysicsClient.cs" />
     <Compile Include="PhysicsGame.cs" />
     <Compile Include="PhysicsBody.cs" />
+    <Compile Include="SimplePhysicsEngine.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Jypeli\Jypeli-Win8.csproj">
