--- a/Jypeli/Jypeli-MacOS.csproj
+++ b/Jypeli/Jypeli-MacOS.csproj
@@ -289,9 +289,12 @@
     <Compile Include="Widgets\Background.cs" />
     <Compile Include="Widgets\BarGauge.cs" />
     <Compile Include="Widgets\CustomQueryWindow.cs" />
+    <Compile Include="Widgets\EasyHighScore.cs" />
+    <Compile Include="Widgets\HighScoreWindow.cs" />
     <Compile Include="Widgets\InputBox.cs" />
     <Compile Include="Widgets\InputWindow.cs" />
     <Compile Include="Widgets\Label.cs" />
+    <Compile Include="Widgets\ScoreListWidget.cs" />
     <Compile Include="Widgets\ListWidget.cs" />
     <Compile Include="Widgets\MessageDisplay.cs" />
     <Compile Include="Widgets\MessageWindow.cs" />
