--- a/testit/EmptyTest/EmptyTest/EmptyTest.csproj
+++ b/testit/EmptyTest/EmptyTest/EmptyTest.csproj
@@ -28,6 +28,8 @@
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
     <ReferencePath>$(registry:HKEY_LOCAL_MACHINE\Software\Jypeli@Install_Dir)\lib\x86</ReferencePath>
+    <ProductVersion>8.0.30703</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -53,24 +55,12 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="mscorlib">
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="System">
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="System.Xml">
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="System.Core">
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="System.Xml.Linq">
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="System.Net">
-      <Private>False</Private>
-    </Reference>
+    <Reference Include="mscorlib" />
+    <Reference Include="System" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Ohjelma.cs" />
@@ -78,20 +68,26 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\rajahdys2.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Game.ico" />
     <Content Include="GameThumbnail.png" />
+    <Content Include="Content\rajahdys.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Jypeli\Jypeli-WindowsGL.csproj">
-      <Project>{76cc55a2-bece-4f80-b491-ddcab9f061fb}</Project>
+    <ProjectReference Include="..\..\..\..\MonoGame\MonoGame.Framework\MonoGame.Framework.WindowsGL.csproj">
+      <Project>{6D75E618-19CA-4C51-9546-F10965FBC0B8}</Project>
+      <Name>MonoGame.Framework.WindowsGL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\Jypeli\Jypeli-WindowsGL.csproj">
+      <Project>{76CC55A2-BECE-4F80-B491-DDCAB9F061FB}</Project>
       <Name>Jypeli-WindowsGL</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\MonoGame\MonoGame.Framework\Jypeli.MonoGame.Framework.WindowsGL.csproj">
-      <Project>{da65b249-9290-4a09-a48c-443a65845583}</Project>
-      <Name>Jypeli.MonoGame.Framework.WindowsGL</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\Physics2d\Physics2d-WindowsGL.csproj">
-      <Project>{041d26c6-a261-4843-906e-7326ab1dba4c}</Project>
+    <ProjectReference Include="..\..\..\Physics2d\Physics2d-WindowsGL.csproj">
+      <Project>{041D26C6-A261-4843-906E-7326AB1DBA4C}</Project>
       <Name>Physics2d-WindowsGL</Name>
     </ProjectReference>
   </ItemGroup>
